<resources>

    <string name="app_name">OptionPricer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_pricer">Pricer</string>
    <string name="option_type">Option Type</string>
	<string name="radio_call_text">Call</string>
	<string name="radio_put_text">Put</string>
	<string name="stockprice_hint">Stock Price</string>
	<string name="strike_hint">Strike Price</string>
	<string name="vol_hint">Implied Volatility</string>
	<string name="interestrate_hint">Interest rate</string>
	<string name="timetoexpiry_hint">Time to expiry</string>
	<string name="calculate_text">Calculate</string>
	<string name="option_value">Option Value:</string>
</resources>